Fixed search button on iOS

--- a/styles/components/_search-form.scss
+++ b/styles/components/_search-form.scss
@@ -12,6 +12,8 @@
     flex-grow: 1;
     background: transparent;
     border: 0;
+    padding: 0;
+    margin: 0;
     border-bottom: 3px solid #999;
     outline: 0;
     padding-right: 1em;
@@ -23,13 +25,12 @@
   &__button {
     line-height: inherit;
     border: 0;
-    width: 1.5em;
+    width: 2em;
     margin-left: -0.3em;
     margin-right: 0.2em;
-    vertical-align: middle;
     background: transparent;
     svg {
-      vertical-align: middle;
+      vertical-align: top;
     }
   }
 
